# EDAElite

./: .gitignore  CMakeLists.txt  LUT_match.txt  README.md  analyse.py  compile.sh  config.json  demo.run  main.cpp  recordPerf.sh  run.sh  runCaseRepeat.sh  save.txt  tar.sh  test.txt  wubaixuantest.node.out
Result/: case_1_out.nodes  case_2_out.nodes  case_3_out.nodes  case_4_out.nodes
WorkSpace/public/: log.txt  readme.txt
WorkSpace/public/Arch/: Arch文件说明.docx  fpga.scl_bk
WorkSpace/public/Benchmark/: netlist文件说明.docx
WorkSpace/public/Benchmark/public_release/: case_11.timing
WorkSpace/public/Test/: case_1.sol  dbg.tcl  run.py  run.sh  run_case1.tcl  run_case10.tcl  run_case2.tcl  run_case3.tcl  run_case4.tcl  run_case5.tcl  run_case6.tcl  run_case7.tcl  run_case8.tcl  run_case9.tcl
WorkSpace/public/Test/Result/: case_2.nodes.out
app/: CMakeLists.txt  Makefile
app/include/: arbsa.h  arch.h  binary.h  global.h  global_placement_sa.h  method.h  netlist.h  object.h  pindensity.h  rsmt.h  sa.h  test.h  wirelength.h
app/src/: arbsa.cpp  arbsaMtx.cpp  binary.cpp  global.cpp  global_placement_sa.cpp  legal.cpp  method.cpp  netlist.cpp  object.cpp  pindensity.cpp  rsmt.cpp  sa.cpp  test.cpp  wirelength.cpp
info/: caseInfo.csv  connectedSame.csv  isPLB.csv
log/: log.txt
netCsv/: case_1.csv
